@@ -1,13 +1,14 @@
 package javasabr.rlib.network;
 
-import static java.util.stream.Collectors.toList;
-import static javasabr.rlib.network.NetworkFactory.newStringDataSSLClientNetwork;
-import static javasabr.rlib.network.NetworkFactory.newStringDataSSLServerNetwork;
-
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.io.PrintWriter;
 import java.net.InetSocketAddress;
+import java.net.ServerSocket;
+import java.net.Socket;
 import java.nio.ByteBuffer;
 import java.time.Duration;
+import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ThreadLocalRandom;
@@ -19,13 +20,19 @@ import javasabr.rlib.common.util.Utils;
 import javasabr.rlib.logger.api.Logger;
 import javasabr.rlib.logger.api.LoggerLevel;
 import javasabr.rlib.logger.api.LoggerManager;
+import javasabr.rlib.network.client.ClientNetwork;
 import javasabr.rlib.network.impl.DefaultBufferAllocator;
+import javasabr.rlib.network.impl.StringDataSslConnection;
 import javasabr.rlib.network.packet.impl.AbstractSslNetworkPacketReader;
 import javasabr.rlib.network.packet.impl.AbstractSslNetworkPacketWriter;
 import javasabr.rlib.network.packet.impl.StringReadablePacket;
 import javasabr.rlib.network.packet.impl.StringWritableNetworkPacket;
+import javasabr.rlib.network.server.ServerNetwork;
 import javasabr.rlib.network.util.NetworkUtils;
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLServerSocketFactory;
 import javax.net.ssl.SSLSocket;
+import javax.net.ssl.SSLSocketFactory;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -43,17 +50,17 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
   @SneakyThrows
   void certificatesTest() {
 
-    var keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
-    var sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
-    var clientSSLContext = NetworkUtils.createAllTrustedClientSslContext();
+    InputStream keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
+    SSLContext sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
+    SSLContext clientSSLContext = NetworkUtils.createAllTrustedClientSslContext();
 
-    var serverPort = NetworkUtils.getAvailablePort(10000);
+    int serverPort = NetworkUtils.getAvailablePort(10000);
 
-    var serverSocketFactory = sslContext.getServerSocketFactory();
-    var serverSocket = serverSocketFactory.createServerSocket(serverPort);
+    SSLServerSocketFactory serverSocketFactory = sslContext.getServerSocketFactory();
+    ServerSocket serverSocket = serverSocketFactory.createServerSocket(serverPort);
 
-    var clientSocketFactory = clientSSLContext.getSocketFactory();
-    var clientSocket = (SSLSocket) clientSocketFactory.createSocket("localhost", serverPort);
+    SSLSocketFactory clientSocketFactory = clientSSLContext.getSocketFactory();
+    SSLSocket clientSocket = (SSLSocket) clientSocketFactory.createSocket("localhost", serverPort);
 
     var clientSocketOnServer = serverSocket.accept();
 
@@ -63,8 +70,8 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
       clientOutStream.flush();
     })).start();
 
-    var serverIn = new Scanner(clientSocketOnServer.getInputStream());
-    var receivedOnServer = serverIn.next() + " " + serverIn.next();
+    Scanner serverIn = new Scanner(clientSocketOnServer.getInputStream());
+    String receivedOnServer = serverIn.next() + " " + serverIn.next();
 
     Assertions.assertEquals("Hello SSL", receivedOnServer);
   }
@@ -73,28 +80,28 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
   @SneakyThrows
   void serverSSLNetworkTest() {
 
-    var keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
-    var sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
+    InputStream keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
+    SSLContext sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
 
-    var serverNetwork = newStringDataSSLServerNetwork(
+    ServerNetwork<StringDataSslConnection> serverNetwork = NetworkFactory.stringDataSslServerNetwork(
         ServerNetworkConfig.DEFAULT_SERVER,
         new DefaultBufferAllocator(ServerNetworkConfig.DEFAULT_CLIENT),
         sslContext);
 
-    var serverAddress = serverNetwork.start();
+    InetSocketAddress serverAddress = serverNetwork.start();
 
     serverNetwork
         .accepted()
         .flatMap(Connection::receivedEvents)
         .subscribe(event -> {
-          var message = event.packet.getData();
+          var message = event.packet().data();
           LOGGER.info("Received from client: " + message);
-          event.connection.send(new StringWritableNetworkPacket("Echo: " + message));
+          event.connection().send(new StringWritableNetworkPacket("Echo: " + message));
         });
 
-    var clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
-    var sslSocketFactory = clientSslContext.getSocketFactory();
-    var sslSocket = (SSLSocket) sslSocketFactory.createSocket(serverAddress.getHostName(), serverAddress.getPort());
+    SSLContext clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
+    SSLSocketFactory sslSocketFactory = clientSslContext.getSocketFactory();
+    SSLSocket sslSocket = (SSLSocket) sslSocketFactory.createSocket(serverAddress.getHostName(), serverAddress.getPort());
 
     var buffer = ByteBuffer.allocate(1024);
     buffer.position(2);
@@ -110,18 +117,18 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
 
     buffer.clear();
 
-    var in = sslSocket.getInputStream();
-    var readBytes = in.read(buffer.array());
+    InputStream in = sslSocket.getInputStream();
+    int readBytes = in.read(buffer.array());
 
     buffer
         .position(readBytes)
         .flip();
-    var packetLength = buffer.getShort();
+    short packetLength = buffer.getShort();
 
-    var response = new StringReadablePacket();
-    response.read(null, buffer, packetLength - 2);
+    StringReadablePacket response = new StringReadablePacket();
+    response.read(buffer, packetLength - 2);
 
-    LOGGER.info("Response: " + response.getData());
+    LOGGER.info("Response: " + response.data());
 
     serverNetwork.shutdown();
   }
@@ -134,37 +141,37 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
     //LoggerManager.enable(AbstractSSLPacketWriter.class, LoggerLevel.DEBUG);
     //LoggerManager.enable(AbstractSSLPacketReader.class, LoggerLevel.DEBUG);
 
-    var keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
-    var sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
+    InputStream keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
+    SSLContext sslContext = NetworkUtils.createSslContext(keystoreFile, "test");
 
-    var serverPort = NetworkUtils.getAvailablePort(1000);
+    int serverPort = NetworkUtils.getAvailablePort(1000);
 
-    var serverSocketFactory = sslContext.getServerSocketFactory();
-    var serverSocket = serverSocketFactory.createServerSocket(serverPort);
-    var counter = new CountDownLatch(1);
+    SSLServerSocketFactory serverSocketFactory = sslContext.getServerSocketFactory();
+    ServerSocket serverSocket = serverSocketFactory.createServerSocket(serverPort);
+    CountDownLatch counter = new CountDownLatch(1);
 
-    var clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
-    var clientNetwork = newStringDataSSLClientNetwork(
+    SSLContext clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
+    ClientNetwork<StringDataSslConnection> clientNetwork = NetworkFactory.stringDataSslClientNetwork(
         NetworkConfig.DEFAULT_CLIENT,
         new DefaultBufferAllocator(NetworkConfig.DEFAULT_CLIENT),
         clientSslContext);
 
     clientNetwork
-        .connected(new InetSocketAddress("localhost", serverPort))
+        .connectReactive(new InetSocketAddress("localhost", serverPort))
         .doOnNext(connection -> connection.send(new StringWritableNetworkPacket("Hello SSL")))
         .doOnError(Throwable::printStackTrace)
         .flatMapMany(Connection::receivedEvents)
         .subscribe(event -> {
-          LOGGER.info("Received from server: " + event.packet.getData());
+          LOGGER.info("Received from server: " + event.packet().data());
           counter.countDown();
         });
 
-    var acceptedClientSocket = serverSocket.accept();
+    Socket acceptedClientSocket = serverSocket.accept();
 
     var buffer = ByteBuffer.allocate(512);
 
-    var clientIn = acceptedClientSocket.getInputStream();
-    var readBytes = clientIn.read(buffer.array());
+    InputStream clientIn = acceptedClientSocket.getInputStream();
+    int readBytes = clientIn.read(buffer.array());
 
     buffer
         .position(readBytes)
@@ -173,11 +180,11 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
     var dataLength = buffer.getShort();
 
     var receivedPacket = new StringReadablePacket();
-    receivedPacket.read(null, buffer, dataLength);
+    receivedPacket.read(buffer, dataLength);
 
-    Assertions.assertEquals("Hello SSL", receivedPacket.getData());
+    Assertions.assertEquals("Hello SSL", receivedPacket.data());
 
-    LOGGER.info("Received from client: " + receivedPacket.getData());
+    LOGGER.info("Received from client: " + receivedPacket.data());
 
     buffer.clear();
     buffer.position(2);
@@ -187,7 +194,7 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
     buffer.putShort(0, (short) buffer.position());
     buffer.flip();
 
-    var out = acceptedClientSocket.getOutputStream();
+    OutputStream out = acceptedClientSocket.getOutputStream();
     out.write(buffer.array(), 0, buffer.limit());
     out.flush();
 
@@ -210,42 +217,43 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
     //LoggerManager.enable(AbstractSSLPacketWriter.class, LoggerLevel.DEBUG);
     //LoggerManager.enable(AbstractSSLPacketReader.class, LoggerLevel.DEBUG);
 
-    var keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
-    var serverSSLContext = NetworkUtils.createSslContext(keystoreFile, "test");
+    InputStream keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
+    SSLContext serverSSLContext = NetworkUtils.createSslContext(keystoreFile, "test");
 
-    var serverNetwork = newStringDataSSLServerNetwork(
+    ServerNetwork<StringDataSslConnection> serverNetwork = NetworkFactory.stringDataSslServerNetwork(
         ServerNetworkConfig.DEFAULT_SERVER,
         new DefaultBufferAllocator(ServerNetworkConfig.DEFAULT_CLIENT),
         serverSSLContext);
 
-    var expectedReceivedPackets = 90;
-    var serverAddress = serverNetwork.start();
+    InetSocketAddress serverAddress = serverNetwork.start();
+    int expectedReceivedPackets = 90;
+
     var counter = new CountDownLatch(expectedReceivedPackets);
 
     serverNetwork
         .accepted()
         .flatMap(Connection::receivedEvents)
         .subscribe(event -> {
-          var message = event.packet.getData();
+          var message = event.packet().data();
           LOGGER.info("Received from client: " + message);
-          event.connection.send(new StringWritableNetworkPacket("Echo: " + message));
+          event.connection().send(new StringWritableNetworkPacket("Echo: " + message));
         });
 
-    var clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
-    var clientNetwork = newStringDataSSLClientNetwork(
+    SSLContext clientSslContext = NetworkUtils.createAllTrustedClientSslContext();
+    ClientNetwork<StringDataSslConnection> clientNetwork = NetworkFactory.stringDataSslClientNetwork(
         NetworkConfig.DEFAULT_CLIENT,
         new DefaultBufferAllocator(NetworkConfig.DEFAULT_CLIENT),
         clientSslContext);
 
     clientNetwork
-        .connected(serverAddress)
+        .connectReactive(serverAddress)
         .doOnNext(connection -> IntStream
             .range(10, expectedReceivedPackets + 10)
             .forEach(length -> connection.send(newMessage(9, length))))
         .doOnError(Throwable::printStackTrace)
         .flatMapMany(Connection::receivedEvents)
         .subscribe(event -> {
-          LOGGER.info("Received from server: " + event.packet.getData());
+          LOGGER.info("Received from server: " + event.packet().data());
           counter.countDown();
         });
 
@@ -270,24 +278,22 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
     LoggerManager.enable(AbstractSslNetworkPacketWriter.class, LoggerLevel.DEBUG);
     LoggerManager.enable(AbstractSslNetworkPacketReader.class, LoggerLevel.DEBUG);
 
-    var keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
-    var serverSSLContext = NetworkUtils.createSslContext(keystoreFile, "test");
-    var clientSSLContext = NetworkUtils.createAllTrustedClientSslContext();
+    InputStream keystoreFile = StringSSLNetworkTest.class.getResourceAsStream("/ssl/rlib_test_cert.p12");
+    SSLContext serverSSLContext = NetworkUtils.createSslContext(keystoreFile, "test");
+    SSLContext clientSSLContext = NetworkUtils.createAllTrustedClientSslContext();
 
     int packetCount = 10;
 
-    try (var testNetwork = buildStringSSLNetwork(serverSSLContext, clientSSLContext)) {
-
-      var bufferSize = testNetwork.serverNetworkConfig.getReadBufferSize();
-
+    try (TestNetwork<StringDataSslConnection> testNetwork = buildStringSSLNetwork(serverSSLContext, clientSSLContext)) {
+      var bufferSize = testNetwork.serverNetworkConfig.readBufferSize();
       var random = ThreadLocalRandom.current();
 
-      var clientToServer = testNetwork.clientToServer;
-      var serverToClient = testNetwork.serverToClient;
+      StringDataSslConnection clientToServer = testNetwork.clientToServer;
+      StringDataSslConnection serverToClient = testNetwork.serverToClient;
 
       var pendingPacketsOnServer = serverToClient
           .receivedPackets()
-          .doOnNext(packet -> LOGGER.info("Received from client: " + packet.getData()))
+          .doOnNext(packet -> LOGGER.info("Received from client: " + packet.data()))
           .buffer(packetCount);
 
       var messages = IntStream
@@ -297,17 +303,18 @@ public class StringSSLNetworkTest extends BaseNetworkTest {
             return StringUtils.generate(length);
           })
           .peek(message -> clientToServer.send(new StringWritableNetworkPacket(message)))
-          .collect(toList());
+          .toList();
 
-      var receivedPackets = ObjectUtils.notNull(pendingPacketsOnServer.blockFirst(Duration.ofSeconds(5000)));
+      List<? extends StringReadablePacket> receivedPackets =
+          ObjectUtils.notNull(pendingPacketsOnServer.blockFirst(Duration.ofSeconds(5000)));
 
-      Assertions.assertEquals(receivedPackets.size(), packetCount, "Didn't receive all packets");
+      Assertions.assertEquals(packetCount, receivedPackets.size(), "Didn't receive all packets");
 
       var wrongPacket = receivedPackets
           .stream()
           .filter(packet -> messages
               .stream()
-              .noneMatch(message -> message.equals(packet.getData())))
+              .noneMatch(message -> message.equals(packet.data())))
           .findFirst()
           .orElse(null);
 
